# traysample

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  traysample.pro  traysample.qrc
resources/: traysample.qrc
